# personal-finance-app

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CHANGES_SUMMARY.txt  DATABASE_ENCRYPTION_STATUS.md  DOCS_CLEANUP_SUMMARY.md  DOCUMENTATION_INDEX.md  EMAIL_SETUP.md  ENCRYPTION_SETUP.md  FONTS_GUIDE.md  POETRY_EXAMPLE.md  POETRY_GUIDE.md  PRODUCTION_OPTIMIZATION.md  PYTHON_COMPATIBILITY_NOTE.md  Procfile  QUICK_START.md  README.md  TESTING_GUIDE.md  TEST_SUMMARY.md  UPDATING_DEPENDENCIES.md  add_categories.py  app.py  config.py  encrypt_database.py  extensions.py  middleware.py  migrate_accounts.py  models.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  run_tests.sh  seed_data.py  start.sh  tailwind.config.js  utils.py
FinanceApp.app/Contents/: Info.plist
docs/archive/: BEGINNER_CHECKLIST.md  CHANGES_SUMMARY.txt  DEPLOYMENT_GUIDE.md  MIGRATION_SUMMARY.md  PYTHON_VERSION_UPDATES.md  README.md  SETUP_SUMMARY.md  START_HERE.md  add_categories.py  encrypt_database.py  migrate_accounts.py  run_tests.sh  start.sh
routes/: __init__.py  accounts.py  auth.py  categories.py  main.py  transactions.py
static/css/: input.css  output.css
templates/: about.html  base.html  index.html
templates/accounts/: add.html  edit.html  list.html
templates/auth/: forgot_password.html  login.html  register.html  reset_password.html
templates/categories/: add.html  delete.html  edit.html  (+1 more)
tests/: README.md  test_accounts.py  test_auth.py  test_categories.py  test_models.py  test_security.py  test_transactions.py  test_user_separation.py
(+5 files in other folders)
