[tool.poetry]
name = "personal-finance-app"
version = "0.1.0"
description = "A personal finance tracking application for learning"
authors = ["Jack"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
flask = "3.0.0"
flask-sqlalchemy = "3.1.1"
flask-login = "0.6.3"
sqlalchemy = "2.0.23"
werkzeug = "3.0.1"
python-dotenv = "1.0.0"
watchdog = "3.0.0"
pyopenssl = "24.0.0"
gunicorn = "^25.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
